--- a/edu.html
+++ b/edu.html
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/KVlyf/contact.html">ContactMe</a>
+                        <a class="nav-link" href="contact.html">ContactMe</a>
                     </li>
 
                 </ul>
