--- a/edu.html
+++ b/edu.html
@@ -29,7 +29,7 @@
                         <a class="nav-link " aria-current="page" href="index.html">Myself</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/KVlyf/edu.html">Education</a>
+                        <a class="nav-link active" href="/KVlyf//edu.html">Education</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -46,7 +46,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">ContactMe</a>
+                        <a class="nav-link" href="/KVlyf//contact.html">ContactMe</a>
                     </li>
 
                 </ul>
