--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                         <a class="nav-link " aria-current="page" href="index.html">Myself</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/KVlyf//edu.html">Education</a>
+                        <a class="nav-link" href="/KVlyf/edu.html">Education</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/KVlyf//contact.html">ContactMe</a>
+                        <a class="nav-link active" href="/KVlyf/contact.html">ContactMe</a>
                     </li>
 
                 </ul>
