--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/KVlyf/">KVlyf</a>
+            <a class="navbar-brand" href="/kvlyf/">KVlyf</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Myself</a>
+                        <a class="nav-link active" aria-current="page" href="/kvlyf/">Myself</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/KVlyf/edu.html">Education</a>
+                        <a class="nav-link" href="/kvlyf/edu.html">Education</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -37,16 +37,16 @@
                             Dropdown
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/interest.html">Intrests</a></li>
-                            <li><a class="dropdown-item" href="/hobbies.html">Hobbies</a></li>
+                            <li><a class="dropdown-item" href="/kvlyf/interest.html">Intrests</a></li>
+                            <li><a class="dropdown-item" href="/kvlyf/hobbies.html">Hobbies</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="/eact.html">xtraco-activities</a></li>
+                            <li><a class="dropdown-item" href="/kvlyf/eact.html">xtraco-activities</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/KVlyf/contact.html">ContactMe</a>
+                        <a class="nav-link" href="/kvlyf/contact.html">ContactMe</a>
                     </li>
 
                 </ul>
