--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/KVlyf/">KVlyf</a>
+            <a class="navbar-brand" href="/kvlyf/">KVlyf</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="index.html">Myself</a>
+                        <a class="nav-link " aria-current="page" href="/kvlyf/index.html">Myself</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/KVlyf/edu.html">Education</a>
+                        <a class="nav-link" href="/kvlyf/edu.html">Education</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -50,7 +50,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/KVlyf/contact.html">ContactMe</a>
+                        <a class="nav-link active" href="/kvlyf/contact.html">ContactMe</a>
                     </li>
 
                 </ul>
